---
source: src/tests/store_parsing.rs
expression: acquire_errors
---

  × Your cargo-vet store (supply-chain) has consistency errors

Error: 
  × 'bad' is not a valid criteria name
   ╭─[config.toml:2:1]
 2 │ [policy.serde]
 3 │ criteria = "bad"
   ·            ─────
 4 │ dev-criteria = "nope"
   ╰────
  help: the possible criteria are ["good", "safe-to-run", "safe-to-deploy"]
Error: 
  × 'nope' is not a valid criteria name
   ╭─[config.toml:3:1]
 3 │ criteria = "bad"
 4 │ dev-criteria = "nope"
   ·                ──────
 5 │ dependency-criteria = { serde_derive = "nada", clap = ["safe-to-run", "unsafe-for-all", "good"] }
   ╰────
  help: the possible criteria are ["good", "safe-to-run", "safe-to-deploy"]
Error: 
  × 'unsafe-for-all' is not a valid criteria name
   ╭─[config.toml:4:1]
 4 │ dev-criteria = "nope"
 5 │ dependency-criteria = { serde_derive = "nada", clap = ["safe-to-run", "unsafe-for-all", "good"] }
   ·                                                                       ────────────────
 6 │ 
   ╰────
  help: the possible criteria are ["good", "safe-to-run", "safe-to-deploy"]
Error: 
  × 'nada' is not a valid criteria name
   ╭─[config.toml:4:1]
 4 │ dev-criteria = "nope"
 5 │ dependency-criteria = { serde_derive = "nada", clap = ["safe-to-run", "unsafe-for-all", "good"] }
   ·                                        ──────
 6 │ 
   ╰────
  help: the possible criteria are ["good", "safe-to-run", "safe-to-deploy"]

